2015-10-24  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 36941: Src/utils.c, Src/zsh.h, Src/Modules/tcp.c: ensure shell
	knows about file descriptiors used by ztcp and allow such file
	descriptors to be marked as internal if needed (not yet used).

2015-10-22  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Doc/Zsh/contrib.yo: vcs_info docs: Typo fix.

2015-10-21  Barton E. Schaefer  <schaefer@zsh.org>

	* unposted: Src/math.c: strdup should be ztrdup

	* 36909: Src/hist.c: in getargs(), sanity-check the offsets for
	start and end of the requested words, in case of overflow

	* 36871: Functions/Zle/bracketed-paste-magic: move initial call
	to "zle .bracketed-paste-magic" to occur earlier in the function

2015-10-20  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 36900: Completion/Unix/Command/_git: _git: stash names
	completion: Display log messages

2015-10-19  Oliver Kiddle  <opk@zsh.org>

	* 36642: Eric Cook: Completion/Unix/Command/_zfs:
	complete jail/unjail subcommands on freebsd

	* 36646: Eric Cook: Completion/Unix/Type/_zfs_dataset,
	Completion/Unix/Command/_zpool, Completion/Unix/Command/_zfs:
	solaris/openzfs differences; only use -t share solaris

	* 36889: Eric Cook: Completion/BSD/Command/_sockstat:
	completion of system specific sockstat options

	* 36869: Matthew Martin: Completion/Unix/Command/_ssh: use
	permissions to limit files completed for ssh identity files

2015-10-18  Frank Terbeck  <ft@bewatermyfriend.org>

	* 36888: Functions/VCS_Info/vcs_info: vcs_info: Prevent
	warn_create_global warning with '-preinit-' state

2015-10-15  Peter Stephenson  <p.stephenson@samsung.com>

	* 36864: Completion/Unix/Command/_nm,
	Completion/Unix/Command/_objdump: new objdump completion plus
	tweak to _nm.

2015-10-14  Barton E. Schaefer  <schaefer@zsh.org>

	* 36853: Src/exec.c: replace pushheap/popheap by NEWHEAPS/OLDHEAPS
	in doshfunc() to optimize memory management

2015-10-14  Peter Stephenson  <p.stephenson@samsung.com>
